fix table overflow on small screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -214,6 +214,12 @@ ol {
 	main {
 		padding: 1em;
 	}
+	table {
+		td,
+		th {
+			padding-inline: 5px;
+		}
+	}
 }
 
 .sr-only {
